--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "glob": "^7.1.4",
     "jest": "^24.0.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "standard": "^12.0.1",
     "supertest": "^3.0.0"
