--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "require-dir": "^1.0.0",
     "sync-request": "^6.0.0",
     "universal-analytics": "^0.4.16",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "moment": "^2.24.0"
   },
   "greenkeeper": {
     "ignore": [
@@ -54,7 +55,6 @@
   "devDependencies": {
     "glob": "^7.1.4",
     "jest": "^24.0.1",
-    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "standard": "^12.0.1",
     "supertest": "^3.0.0"
